[tool.poetry]
name = "nomad-textual"
version = "0.1.0"
description = "Nomad console based on Textual"
authors = ["Bruno Bonfils <asyd@asyd.net>"]
license = "DWTFPL"
readme = "README.md"
packages = [{include = "nomad_textual"}]

[tool.poetry.dependencies]
python = "^3.10"
textual = "^0.5.0"
certifi = "^2022.9.24"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
