[tool.poetry]
name = "nomad-textual"
version = "0.1.0"
description = "Nomad console based on Textual"
authors = ["Bruno Bonfils <asyd@asyd.net>"]
license = "DWTFPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
textual = "0.32.0"
certifi = "^2022.9.24"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
click = "^8.1.3"
aiohttp = "^3.8.3"
msgpack = "^1.0.4"
flake8 = "^6.0.0"
black = "^22.10.0"
ipython = "^8.6.0"
textual-dev = "^1.1.0"
ruff = "^0.0.282"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
